tests/samples/negative/resources/move_defer_exit_after_later_move.ax
module move_defer_exit_after_later_move;

fn consume<T>(value: T) -> void {
}

fn duplicate<T>(value: T) -> void {
    var current: T = value;
    defer consume(current);
    let consumed: T = current;
}

fn main() -> i32 {
    return 0;
}
